adapt zhihu answer layout

--- a/public/index.html
+++ b/public/index.html
@@ -142,15 +142,15 @@
           <div class="bg-gray-100 border-t-2 border-gray-200">
             <div class="flex flex-col">
               <div class="flex flex-col px-12 py-10 w-full border-gray-200">
-                <div class="flex flex-grow">
-                  <div>
-                    <img class="h-8 w-8 md:h-10 md:w-10 md:-my-1 rounded-full mx-auto"
-                      src="https://subjpop.com/images/djs/mimida.jpg">
-                    <div class="pt-2">
-                      Mimida
+                <div class="flex flex-col ml-4 md:ml-6">
+                  <div class="my-3 flex flex-row justify-start items-center">
+                    <img class="h-8 w-8 md:h-10 md:w-10 rounded-full" src="https://subjpop.com/images/djs/mimida.jpg">
+                    <div class="ml-3 flex flex-col">
+                      <div class="font-semibold">Mimida</div>
+                      <div class="text-gray-700 text-sm">乐曲派偶像观察员</div>
                     </div>
                   </div>
-                  <div class="leading-relaxed flex flex-col ml-4 md:ml-6">
+                  <div class="leading-relaxed flex flex-col">
                     <h2 class="font-medium text-gray-800 text-lg">「探索一族」</h2>
                     <p class="text-gray-600 mt-1 text-sm md:text-base">
                       台译：http://www.willmusic.com.tw/SalePage/Index/5349680?cid=290199</p>
@@ -158,15 +158,16 @@
                 </div>
               </div>
               <div class="flex flex-col px-12 py-10 w-full border-t-2 border-gray-200">
-                <div class="flex flex-grow">
-                  <div>
-                    <img class="h-8 w-8 md:h-10 md:w-10 md:-my-1 rounded-full mx-auto"
+                <div class="flex flex-col ml-4 md:ml-6">
+                  <div class="my-3 flex flex-row justify-start items-center">
+                    <img class="h-8 w-8 md:h-10 md:w-10 rounded-full"
                       src="https://subjpop.com/images/djs/davidchili.jpg">
-                    <div class="pt-2">
-                      DVCiCi
+                    <div class="ml-3 flex flex-col">
+                      <div class="font-semibold">DVC</div>
+                      <div class="text-gray-700 text-sm">Rapper, a.k.a 你的🍒</div>
                     </div>
                   </div>
-                  <div class="leading-relaxed flex flex-col ml-4 md:ml-6">
+                  <div class="leading-relaxed flex flex-col">
                     <h2 class="font-medium text-gray-800 text-lg">「探索一族」</h2>
                     <p class="text-gray-600 mt-1 text-sm md:text-base">
                       Originally the group was just called Quest. After meeting the Jungle Brothers, Afrika Baby Bam
@@ -176,15 +177,15 @@
                 </div>
               </div>
               <div class="flex flex-col px-12 py-10 w-full border-t-2 border-gray-200">
-                <div class="flex flex-grow">
-                  <div>
-                    <img class="h-8 w-8 md:h-10 md:w-10 md:-my-1 rounded-full mx-auto"
-                      src="https://subjpop.com/images/djs/minami.jpg">
-                    <div class="pt-2">
-                      Minami
+                <div class="flex flex-col ml-4 md:ml-6">
+                  <div class="my-3 flex flex-row justify-start items-center">
+                    <img class="h-8 w-8 md:h-10 md:w-10 rounded-full" src="https://subjpop.com/images/djs/minami.jpg">
+                    <div class="ml-3 flex flex-col">
+                      <div class="font-semibold">Minami</div>
+                      <div class="text-gray-700 text-sm">ザ・アイドル, My Beauty is for Everyone</div>
                     </div>
                   </div>
-                  <div class="leading-relaxed flex flex-col ml-4 md:ml-6">
+                  <div class="leading-relaxed flex flex-col">
                     <h2 class="font-medium text-gray-800 text-lg">「探索一族」</h2>
                     <p class="text-gray-600 mt-1 text-sm md:text-base">
                       台译很贴切了，就照着用。如果加注释的话可以说一下缘起：最早他们几个人取的乐团名只是一个单词quest。在制作【black is black】这首单曲时，前来造访的朋友提议在quest前面加上a
@@ -192,6 +193,7 @@
                   </div>
                 </div>
               </div>
+
             </div>
           </div>
         </div>
