--- a/public/index.html
+++ b/public/index.html
@@ -155,8 +155,19 @@
                     <p class="text-gray-600 mt-1 text-sm md:text-base">
                       台译：http://www.willmusic.com.tw/SalePage/Index/5349680?cid=290199</p>
                   </div>
+                  <div class="mt-4">
+                    <button class="bg-transparent hover:bg-purple-300 text-purple-700 font-semibold hover:text-white py-2 px-4
+                      border border-purple-500 hover:border-transparent rounded">
+                      👍42
+                    </button>
+                    <button class="bg-transparent hover:bg-purple-300 text-purple-700 font-semibold hover:text-white py-2 px-4
+                      border border-purple-500 hover:border-transparent rounded">
+                      👎4
+                    </button>
+                  </div>
                 </div>
               </div>
+
               <div class="flex flex-col px-12 py-10 w-full border-t-2 border-gray-200">
                 <div class="flex flex-col ml-4 md:ml-6">
                   <div class="my-3 flex flex-row justify-start items-center">
@@ -174,8 +185,19 @@
                       heard Q-Tip introduce himself on a demo track as being "from a group called Quest" and told him to
                       say he was from "a tribe called Quest" and the name stuck.</p>
                   </div>
+                  <div class="mt-4">
+                    <button class="bg-transparent hover:bg-purple-300 text-purple-700 font-semibold hover:text-white py-2 px-4
+                      border border-purple-500 hover:border-transparent rounded">
+                      👍42
+                    </button>
+                    <button class="bg-transparent hover:bg-purple-300 text-purple-700 font-semibold hover:text-white py-2 px-4
+                      border border-purple-500 hover:border-transparent rounded">
+                      👎4
+                    </button>
+                  </div>
                 </div>
               </div>
+
               <div class="flex flex-col px-12 py-10 w-full border-t-2 border-gray-200">
                 <div class="flex flex-col ml-4 md:ml-6">
                   <div class="my-3 flex flex-row justify-start items-center">
@@ -190,6 +212,16 @@
                     <p class="text-gray-600 mt-1 text-sm md:text-base">
                       台译很贴切了，就照着用。如果加注释的话可以说一下缘起：最早他们几个人取的乐团名只是一个单词quest。在制作【black is black】这首单曲时，前来造访的朋友提议在quest前面加上a
                       tribe called，正好完美无缺。</p>
+                  </div>
+                  <div class="mt-4">
+                    <button class="bg-transparent hover:bg-purple-300 text-purple-700 font-semibold hover:text-white py-2 px-4
+                      border border-purple-500 hover:border-transparent rounded">
+                      👍520
+                    </button>
+                    <button class="bg-transparent hover:bg-purple-300 text-purple-700 font-semibold hover:text-white py-2 px-4
+                      border border-purple-500 hover:border-transparent rounded">
+                      👎0
+                    </button>
                   </div>
                 </div>
               </div>
