add access to add new entry

--- a/public/index.html
+++ b/public/index.html
@@ -80,7 +80,13 @@
 
 
             <div class="hidden lg:flex lg:items-center lg:justify-between xl:w-1/4 px-6">
-              <div class="relative ml-4">
+              <div class="relative">
+                <a href="/" class="block rounded-lg px-4 md:px-5 xl:px-4 py-3 md:py-4 xl:py-3 bg-white hover:bg-gray-200
+                  md:text-lg xl:text-base text-gray-800 font-semibold leading-tight shadow-md">
+                  ADD
+                </a>
+              </div>
+              <div class="relative">
                 <a href="/" class="block rounded-lg px-4 md:px-5 xl:px-4 py-3 md:py-4 xl:py-3 bg-white hover:bg-gray-200
                   md:text-lg xl:text-base text-gray-800 font-semibold leading-tight shadow-md">
                   ABOUT
