display search bar in mobile mode

--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,8 @@
 </head>
 
 <body class="antialiased">
-  <div
-    class="fixed z-100 bg-gray-100 inset-x-0 top-0 border-b-2 border-gray-200 lg:border-b-0 lg:static flex items-center">
+  <div class="static z-100 bg-gray-100 inset-x-0 top-0 border-b-2 border-b-20 lg:border-b-0 flex
+    items-center">
     <div class="w-full max-w-screen-xl relative mx-auto px-6">
       <div class="lg:border-b-2 lg:border-gray-200 h-24 flex flex-col justify-center">
         <div class="flex items-center -mx-6">
