--- a/public/index.html
+++ b/public/index.html
@@ -120,7 +120,7 @@
       <div class="flex flex-col min-h-full lg:flex-row lg:p-4">
         <div class="flex flex-col bg-white lg:shadow-2xl lg:rounded-lg lg:overflow-hidden">
           <div class="flex flex-col justify-center p-8">
-            <div class="md:pl-16 pl-0">
+            <div class="px-12 md:pl-12">
               <h1 class="sm:font-light text-2xl sm:text-3xl md:text-4xl text-gray-900 mt-2">A Tribe Called Quest</h1>
               <p>
                 <span class="py-2, bg-purple-200 text-sm sm:text-base text-gray-700 subpixel-antialiased px-1 rounded">
