--- a/public/add_entry/index.html
+++ b/public/add_entry/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="stylesheet" href="./build/tailwind.css">
+  <link rel="stylesheet" href="../build/tailwind.css">
   <title>Mencius Mock-Up</title>
 </head>
 
@@ -121,122 +121,109 @@
         <div class="flex flex-col bg-white lg:shadow-2xl lg:rounded-lg lg:overflow-hidden">
           <div class="flex flex-col justify-center p-8">
             <div class="px-12 md:pl-12">
-              <h1 class="sm:font-light text-2xl sm:text-3xl md:text-4xl text-gray-900 mt-2">A Tribe Called Quest</h1>
-              <p>
+              <p class="py-3">
                 <span class="py-2, bg-purple-200 text-sm sm:text-base text-gray-700 subpixel-antialiased px-1 rounded">
-                  #乐人
+                  词条
                 </span>
+                <h1 class="sm:font-light text-2xl sm:text-3xl md:text-4xl text-gray-900 mt-2">
+                  <input
+                    class="bg-gray-200 focus:bg-white border-transparent focus:border-blue-400 text-gray-900 appearance-none inline-block w-full text-gray-900 border rounded py-3 px-4 focus:outline-none"
+                    placeholder="词条名称">
+                </h1>
               </p>
-              <p class="sm:text-xl text-gray-600 mt-3 leading-relaxed"><span class="font-semibold underline">A Tribe
-                  Called
-                  Quest</span> was an American hip hop collective formed in 1985 and originally composed of MC and main
-                producer Q-Tip, MC Phife Dawg, DJ and co-producer Ali Shaheed Muhammad, and MC Jarobi White, who left
-                the group amicably in 1991.</p>
-              <div class="pt-2 mt-auto">
-                <a class="inline-flex items-center text-purple-600 hover:text-purple-800" target="_blank"
-                  href="https://en.wikipedia.org/wiki/A_Tribe_Called_Quest">
-                  <span class="text-sm md:text-base font-semibold">Surf the Wikipedia</span>
-                  <svg class="fill-current w-4 h-4 ml-2" viewBox="0 0 18 12" xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd" clip-rule="evenodd"
-                      d="M14.5858 7H1C0.447715 7 0 6.55228 0 6C0 5.44772 0.447715 5 1 5H14.5858L11.2929 1.70711C10.9024 1.31658 10.9024 0.683418 11.2929 0.292893C11.6834 -0.0976311 12.3166 -0.0976311 12.7071 0.292893L17.7071 5.29289C18.0976 5.68342 18.0976 6.31658 17.7071 6.70711L12.7071 11.7071C12.3166 12.0976 11.6834 12.0976 11.2929 11.7071C10.9024 11.3166 10.9024 10.6834 11.2929 10.2929L14.5858 7Z">
-                    </path>
-                  </svg>
-                </a>
-              </div>
+              <p class="py-3">
+                <span class="py-2, bg-purple-200 text-sm sm:text-base text-gray-700 subpixel-antialiased px-1 rounded">
+                  译文
+                </span>
+                <h1 class="sm:font-light text-2xl sm:text-3xl md:text-4xl text-gray-900 mt-2">
+                  <input
+                    class="bg-gray-200 focus:bg-white border-transparent focus:border-blue-400 text-gray-900 appearance-none inline-block w-full text-gray-900 border rounded py-3 px-4 focus:outline-none"
+                    placeholder="译文">
+                </h1>
+              </p>
+              <p class="py-3">
+                <span class="py-2, bg-purple-200 text-sm sm:text-base text-gray-700 subpixel-antialiased px-1 rounded">
+                  属性
+                </span>
+                <div class="inline-block relative w-64 m-2">
+                  <select
+                    class="block appearance-none w-full bg-white border border-gray-400 hover:border-gray-500 px-4 py-2 pr-8 rounded shadow leading-tight focus:outline-none focus:shadow-outline">
+                    <option>未选择</option>
+                    <option>乐人</option>
+                    <option>涂鸦团体</option>
+                    <option>艺术家</option>
+                    <option>实业家</option>
+                  </select>
+                  <div class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700">
+                    <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+                      <path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z" /></svg>
+                  </div>
+                </div>
+                <div class="inline-block relative w-64 m-2">
+                  <select
+                    class="block appearance-none w-full bg-white border border-gray-400 hover:border-gray-500 px-4 py-2 pr-8 rounded shadow leading-tight focus:outline-none focus:shadow-outline">
+                    <option>➕</option>
+                    <option>乐人</option>
+                    <option>涂鸦团体</option>
+                    <option>艺术家</option>
+                    <option>实业家</option>
+                  </select>
+                  <div class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700">
+                    <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+                      <path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z" /></svg>
+                  </div>
+                </div>
+                <div class="inline-block relative w-64 m-2">
+                  <select
+                    class="block appearance-none w-full bg-white border border-gray-400 hover:border-gray-500 px-4 py-2 pr-8 rounded shadow leading-tight focus:outline-none focus:shadow-outline">
+                    <option>➕</option>
+                    <option>乐人</option>
+                    <option>涂鸦团体</option>
+                    <option>艺术家</option>
+                    <option>实业家</option>
+                  </select>
+                  <div class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700">
+                    <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+                      <path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z" /></svg>
+                  </div>
+                </div>
+              </p>
+              <p class="py-3">
+                <span class="py-2, bg-purple-200 text-sm sm:text-base text-gray-700 subpixel-antialiased px-1 rounded">
+                  维基链接
+                </span>
+                <input
+                  class="bg-gray-200 focus:bg-white border-transparent focus:border-blue-400 text-gray-900 appearance-none inline-block w-full text-gray-900 border rounded py-3 px-4 focus:outline-none"
+                  placeholder="Wikipedia url">
+              </p>
+              <p class="py-3">
+                <span class="py-2, bg-purple-200 text-sm sm:text-base text-gray-700 subpixel-antialiased px-1 rounded">
+                  豆瓣链接
+                </span>
+                <input
+                  class="bg-gray-200 focus:bg-white border-transparent focus:border-blue-400 text-gray-900 appearance-none inline-block w-full text-gray-900 border rounded py-3 px-4 focus:outline-none"
+                  placeholder="Douban url">
+              </p>
+              <p class="py-3">
+                <span class="py-2, bg-purple-200 text-sm sm:text-base text-gray-700 subpixel-antialiased px-1 rounded">
+                  翻译来源及注释
+                </span>
+                <textarea class="h-60 bg-gray-200 focus:bg-white border-transparent focus:border-blue-400 text-gray-900
+                  appearance-none inline-block w-full text-gray-900 border rounded py-3 px-4 focus:outline-none"
+                  rows="6" placeholder="References">
+                </textarea>
+              </p>
+              <button class="float-right bg-purple-500 hover:bg-purple-700 text-white font-bold py-2 px-4 rounded">
+                提交
+              </button>
             </div>
           </div>
-          <div class="bg-gray-100 border-t-2 border-gray-200">
-            <div class="flex flex-col">
-              <div class="flex flex-col px-12 py-10 w-full border-gray-200">
-                <div class="flex flex-col ml-4 md:ml-6">
-                  <div class="my-3 flex flex-row justify-start items-center">
-                    <img class="h-8 w-8 md:h-10 md:w-10 rounded-full" src="https://subjpop.com/images/djs/mimida.jpg">
-                    <div class="ml-3 flex flex-col">
-                      <div class="font-semibold">Mimida</div>
-                      <div class="text-gray-700 text-sm">乐曲派偶像观察员</div>
-                    </div>
-                  </div>
-                  <div class="leading-relaxed flex flex-col">
-                    <h2 class="font-medium text-gray-800 text-lg">「探索一族」</h2>
-                    <p class="text-gray-600 mt-1 text-sm md:text-base">
-                      台译：http://www.willmusic.com.tw/SalePage/Index/5349680?cid=290199</p>
-                  </div>
-                  <div class="mt-4">
-                    <button class="bg-transparent hover:bg-purple-300 text-purple-700 font-semibold hover:text-white py-2 px-4
-                      border border-purple-500 hover:border-transparent rounded">
-                      👍42
-                    </button>
-                    <button class="bg-transparent hover:bg-purple-300 text-purple-700 font-semibold hover:text-white py-2 px-4
-                      border border-purple-500 hover:border-transparent rounded">
-                      👎4
-                    </button>
-                  </div>
-                </div>
-              </div>
 
-              <div class="flex flex-col px-12 py-10 w-full border-t-2 border-gray-200">
-                <div class="flex flex-col ml-4 md:ml-6">
-                  <div class="my-3 flex flex-row justify-start items-center">
-                    <img class="h-8 w-8 md:h-10 md:w-10 rounded-full"
-                      src="https://subjpop.com/images/djs/davidchili.jpg">
-                    <div class="ml-3 flex flex-col">
-                      <div class="font-semibold">DVC</div>
-                      <div class="text-gray-700 text-sm">Rapper, a.k.a 你的🍒</div>
-                    </div>
-                  </div>
-                  <div class="leading-relaxed flex flex-col">
-                    <h2 class="font-medium text-gray-800 text-lg">「探索一族」</h2>
-                    <p class="text-gray-600 mt-1 text-sm md:text-base">
-                      Originally the group was just called Quest. After meeting the Jungle Brothers, Afrika Baby Bam
-                      heard Q-Tip introduce himself on a demo track as being "from a group called Quest" and told him to
-                      say he was from "a tribe called Quest" and the name stuck.</p>
-                  </div>
-                  <div class="mt-4">
-                    <button class="bg-transparent hover:bg-purple-300 text-purple-700 font-semibold hover:text-white py-2 px-4
-                      border border-purple-500 hover:border-transparent rounded">
-                      👍42
-                    </button>
-                    <button class="bg-transparent hover:bg-purple-300 text-purple-700 font-semibold hover:text-white py-2 px-4
-                      border border-purple-500 hover:border-transparent rounded">
-                      👎4
-                    </button>
-                  </div>
-                </div>
-              </div>
-
-              <div class="flex flex-col px-12 py-10 w-full border-t-2 border-gray-200">
-                <div class="flex flex-col ml-4 md:ml-6">
-                  <div class="my-3 flex flex-row justify-start items-center">
-                    <img class="h-8 w-8 md:h-10 md:w-10 rounded-full" src="https://subjpop.com/images/djs/minami.jpg">
-                    <div class="ml-3 flex flex-col">
-                      <div class="font-semibold">Minami</div>
-                      <div class="text-gray-700 text-sm">ザ・アイドル, My Beauty is for Everyone</div>
-                    </div>
-                  </div>
-                  <div class="leading-relaxed flex flex-col">
-                    <h2 class="font-medium text-gray-800 text-lg">「探索一族」</h2>
-                    <p class="text-gray-600 mt-1 text-sm md:text-base">
-                      台译很贴切了，就照着用。如果加注释的话可以说一下缘起：最早他们几个人取的乐团名只是一个单词quest。在制作【black is black】这首单曲时，前来造访的朋友提议在quest前面加上a
-                      tribe called，正好完美无缺。</p>
-                  </div>
-                  <div class="mt-4">
-                    <button class="bg-transparent hover:bg-purple-300 text-purple-700 font-semibold hover:text-white py-2 px-4
-                      border border-purple-500 hover:border-transparent rounded">
-                      👍520
-                    </button>
-                    <button class="bg-transparent hover:bg-purple-300 text-purple-700 font-semibold hover:text-white py-2 px-4
-                      border border-purple-500 hover:border-transparent rounded">
-                      👎0
-                    </button>
-                  </div>
-                </div>
-              </div>
-
-            </div>
-          </div>
         </div>
       </div>
     </div>
+  </div>
+  </div>
   </div>
 </body>
 
