--- a/public/add_entry/index.html
+++ b/public/add_entry/index.html
@@ -128,7 +128,17 @@
                 <h1 class="sm:font-light text-2xl sm:text-3xl md:text-4xl text-gray-900 mt-2">
                   <input
                     class="bg-gray-200 focus:bg-white border-transparent focus:border-blue-400 text-gray-900 appearance-none inline-block w-full text-gray-900 border rounded py-3 px-4 focus:outline-none"
-                    placeholder="词条名称">
+                    placeholder="Entry">
+                </h1>
+              </p>
+              <p class="py-3">
+                <span class="py-2, bg-purple-200 text-sm sm:text-base text-gray-700 subpixel-antialiased px-1 rounded">
+                  罗马化转写
+                </span>
+                <h1 class="sm:font-light text-2xl sm:text-3xl md:text-4xl text-gray-900 mt-2">
+                  <input
+                    class="bg-gray-200 focus:bg-white border-transparent focus:border-blue-400 text-gray-900 appearance-none inline-block w-full text-gray-900 border rounded py-3 px-4 focus:outline-none"
+                    placeholder="Romanization">
                 </h1>
               </p>
               <p class="py-3">
@@ -138,8 +148,29 @@
                 <h1 class="sm:font-light text-2xl sm:text-3xl md:text-4xl text-gray-900 mt-2">
                   <input
                     class="bg-gray-200 focus:bg-white border-transparent focus:border-blue-400 text-gray-900 appearance-none inline-block w-full text-gray-900 border rounded py-3 px-4 focus:outline-none"
-                    placeholder="译文">
+                    placeholder="Translation">
                 </h1>
+              </p>
+              <p class="py-3">
+                <span class="py-2, bg-purple-200 text-sm sm:text-base text-gray-700 subpixel-antialiased px-1 rounded">
+                  语种
+                </span>
+                <div class="inline-block relative w-64 m-2">
+                  <select
+                    class="block appearance-none w-full bg-white border border-gray-400 hover:border-gray-500 px-4 py-2 pr-8 rounded shadow leading-tight focus:outline-none focus:shadow-outline">
+                    <option>未选择</option>
+                    <option>日文</option>
+                    <option>韩文</option>
+                    <option>德文</option>
+                    <option>英文</option>
+                    <option>中文</option>
+                    <option>...</option>
+                  </select>
+                  <div class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700">
+                    <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+                      <path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z" /></svg>
+                  </div>
+                </div>
               </p>
               <p class="py-3">
                 <span class="py-2, bg-purple-200 text-sm sm:text-base text-gray-700 subpixel-antialiased px-1 rounded">
