--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
               <div class="relative">
                 <input id="docsearch"
                   class="transition bg-white shadow-md focus:outline-0 border border-transparent placeholder-gray-700 rounded-lg py-2 pr-4 pl-10 block w-full appearance-none leading-normal"
-                  type="text" placeholder="搜寻条目 / Search Entries">
+                  type="text" placeholder="搜寻条目 / Search Entries" />
                 <div class="pointer-events-none absolute inset-y-0 left-0 pl-4 flex items-center">
                   <svg class="fill-current pointer-events-none text-gray-600 w-4 h-4" xmlns="http://www.w3.org/2000/svg"
                     viewBox="0 0 20 20">
